--- a/Presentation/Pages/Admin/Maker.cshtml
+++ b/Presentation/Pages/Admin/Maker.cshtml
@@ -41,8 +41,7 @@
                 <th></th>
               </tr>
             </thead>
-            <tbody>
-              <!-- change to code later thua --> 
+            <tbody> 
               @foreach (var item in Model.ListMakers){
                 <tr>
                 <!-- <tr id="@item.MakerId" class="list-maker"> -->
@@ -68,6 +67,14 @@
 
   <!-- Plane content-wrapper -->
   <div class="content-wrapper">
+    <!-- row button create -->
+    <div class="row">
+      <div class="col-lg-12 stretch-card">
+        <a href="#CreatePlaneForm" data-toggle="modal" id="btCreatePlane" type="button" class="btn  btn-primary btn-lg btn-inverse-*">
+          <i class="mdi mdi-upload"></i>Create Plane
+        </a>
+      </div>
+    </div>
     <!-- row table -->
     <div class="row">
     <div class="col-lg-9 stretch-card">
@@ -189,7 +196,8 @@
             <div class="col-sm-9">
               <select class="form-control form-control-lg" id="CreatePlane-makerid">
                 @foreach (var item in Model.ListMakers){
-                  <option>@item.MakerId</option>
+                  <option>@item.MakerId - 
+                    @item.MakerName</option>
                 }
               </select>
             </div>
@@ -211,6 +219,7 @@
       </div>
       <div class="model-body" style="margin: 15px" id="bodyEditPlane">
 				<form class="forms-sample">
+          <input id="EditPlane-id" type="hidden" class="form-control"   >
           <div class="form-group row">
             <label class="col-sm-3 col-form-label">SeatNum</label>
             <div class="col-sm-9">
@@ -221,14 +230,15 @@
             <label class="col-sm-3 col-form-label">Maker ID</label>
             <div class="col-sm-9">
               <select class="form-control form-control-lg" id="EditPlane-makerid">
-                  <option id="EditPlane-default" hidden>abc</option>
+                  <option id="EditPlane-default" hidden></option>
                 @foreach (var item in Model.ListMakers){
-                  <option>@item.MakerId</option>
+                  <option>@item.MakerId - 
+                    @item.MakerName</option>
                 }
               </select>
             </div>
           </div>
-          <button id="btsubmitCreatePlane" type="submit" class="btn btn-success mr-2" ><b>Create</b></button>
+          <button id="btsubmitEditPlane" type="submit" class="btn btn-success mr-2" ><b>Update</b></button>
           <button class="btn btn-light" data-dismiss="modal"><b>Cancel</b></button>
         </form>
       </div>
