--- a/Presentation/Pages/Admin/Employer.cshtml
+++ b/Presentation/Pages/Admin/Employer.cshtml
@@ -12,8 +12,8 @@
     <!-- row button insert -->
     <div class="row">
       <div class="col-lg-12 stretch-card">
-        <a href="#myAddForm" data-toggle="modal" id="create-user" type="button" class="btn  btn-primary btn-lg btn-inverse-*">
-          <i class="mdi mdi-upload"></i>Create New
+        <a href="#CreateEmployerForm" data-toggle="modal" id="btCreateEmployer" type="button" class="btn  btn-primary btn-lg btn-inverse-*">
+          <i class="mdi mdi-upload"></i>Create Employer
         </a>
       </div>
     </div>
@@ -27,10 +27,8 @@
            <thead>
             <tr>
               <th>ID</th>
-              <th>Name</th>
-              <th>Birthday</th>
-              <th>Phone</th>
-              <th>Address</th>
+              <th>First name</th>
+              <th>Last name</th>
               <th>Job</th>
               <th>Salary</th>
               <th>Status</th>
@@ -39,20 +37,20 @@
            </thead>
            <tbody>
              <!-- change to code later -->
-            <tr>
-              <td>001</td>
-              <td>Nguyen Van An</td>
-              <td>12/12/2000</td>
-              <td>0902123456</td>
-              <td>273 An Dương Vương</td>
-              <td>Manager</td>
-              <td>5000000 </td>
-              <td><label class="badge badge-warning">In progress</label></td>
-              <td> 
-                <button data-toggle="modal" data-target="#editEmp" type="button" class="btn btn-dark btn-sm  btn-rounded" ><i class="fa fa-cog"></i></button>
-                <button id="del-emp" type="button" class="btn btn-danger btn-sm  btn-rounded delete"><i class="fa fa-times"></i></button>
-              </td>
-            </tr>
+             @foreach (var item in Model.ListEmployers){
+              <tr>
+                <td>item.Id</td>
+                <td>item.FirstName</td>
+                <td>item.LastName</td>
+                <td>item.Job</td>
+                <td>item.Salary</td>
+                <td><label class="badge badge-warning">item.Status</label></td>
+                <td> 
+                  <button  id="@item.Id" data-toggle="modal" data-target="#EditEmployerForm"  type="button" class="btn btn-dark btn-sm  btn-rounded EditEmployer"><i class="fa fa-cog"></i></button>
+                  <button  id="@item.Id" type="button" class="btn btn-danger btn-sm  btn-rounded DeleteEmployer"><i class="fa fa-times" ></i></button>
+                </td>
+              </tr>
+              }
             </tbody>
           </table>
         </div>
@@ -65,7 +63,7 @@
 <!-- end main body -->
 
 <!--formcreate  -->
-<div class="modal fade" id="myAddForm" role="dialog">
+<div class="modal fade" id="CreateEmployerForm" role="dialog">
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content" >
             <div class="modal-header" style=" background-color:aliceblue;">
@@ -170,8 +168,10 @@
                   <label class="col-sm-3 col-form-label">Job</label>
                   <div class="col-sm-9">
                     <select class="form-control">
-                      <option>Customer manager</option>
-                      <option>Flight manager</option>
+                      @foreach (var item in Model.ListJobs){
+                        <option>@item.JobId - 
+                          @item.JobName</option>
+                      }
                     </select>
                   </div>
                 </div>
@@ -202,7 +202,7 @@
 </div>
 
 <!-- edit form -->
-<div class="modal fade" id="editEmp" role="dialog">
+<div class="modal fade" id="EditEmployerForm" role="dialog">
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content" >
             <div class="modal-header" style=" background-color:aliceblue;">
@@ -307,8 +307,10 @@
                   <label class="col-sm-3 col-form-label">Job</label>
                   <div class="col-sm-9">
                     <select class="form-control">
-                      <option>Customer manager</option>
-                      <option>Flight manager</option>
+                      @foreach (var item in Model.ListJobs){
+                        <option>@item.JobId - 
+                          @item.JobName</option>
+                      }
                     </select>
                   </div>
                 </div>
