--- a/Presentation/Pages/Flight.cshtml
+++ b/Presentation/Pages/Flight.cshtml
@@ -50,115 +50,121 @@
 				<input type="text" data-date-format="DD-dd/mm/yyyy" id="check-in">
 			</div>
 		</div>
-		<div class="row" style="margin-top: 20px">
-			<div class="col-sm-12">
-				<div class="flight-card-wrapper">
-					<div class="flight-card">
-						<div class="flight-card-itinerary">
-							<div class="itinerary-info">
-								<div class="itinerary-info__time">
-									5:30
-								</div>
-								<div class="itinerary-info__airport"> 
-										SGN-đi
-								</div>
-							</div>
-							<div class="itinerary-info__icons">
-								<span></span>
-							</div>
-							<div class="itinerary-info">
-								<div class="itinerary-info__time ">
-									7:40
-								</div>
-								<div class="itinerary-info__airport">
-									Han -đến
-								</div>
-							</div>
-						</div>
-						<div class="flight-card-details-price">
-							<div class="flight-card-details">
-								<div style="float:left;">
-									<span class="flight-card-details__duration ">Blasdasdasdasasdsad</span>
-									<div class="flight-card-details__more">
-										<span class="info-show" >
-											Chi tiết
-										</span>
-										<span class="info-hide">
-											Ẩn
-										</span>
+		@foreach (var item in Model.ListFlights)
+		{
+			@item.FlightId
+			@item.FlightDetails
+			@item.Plane
+			<div class="row" style="margin-top: 20px">
+				<div class="col-sm-12">
+					<div class="flight-card-wrapper">
+						<div class="flight-card">
+							<div class="flight-card-itinerary">
+								<div class="itinerary-info">
+									<div class="itinerary-info__time">
+										5:30
+									</div>
+									<div class="itinerary-info__airport"> 
+											SGN-đi
 									</div>
 								</div>
-								
-								<div class="price-select" style="float:right">
-									<div class="price-select__price  text-right">
-										<div class="starter-price-wrapper">
-											<div class="pricepoint-wrapper pricepoint-wrapper--orange">
-												<div class="pricepoint">
-													<span class="pricepoint__middle">
-														890,000
-														<span class="pricepoint__decimal"></span>
-													</span>
-													<span class="pricepoint__symbol">
-														đ
-													</span>
-												</div>
-											</div>
-										</div>
+								<div class="itinerary-info__icons">
+									<span></span>
+								</div>
+								<div class="itinerary-info">
+									<div class="itinerary-info__time ">
+										7:40
 									</div>
-									<div class="price-select__button">
-										<div class="button-toggle js-button-toggle">
-											<span>
-												Chọn
+									<div class="itinerary-info__airport">
+										Han -đến
+									</div>
+								</div>
+							</div>
+							<div class="flight-card-details-price">
+								<div class="flight-card-details">
+									<div style="float:left;">
+										<span class="flight-card-details__duration ">Blasdasdasdasasdsad</span>
+										<div class="flight-card-details__more">
+											<span class="info-show" >
+												Chi tiết
+											</span>
+											<span class="info-hide">
+												Ẩn
 											</span>
 										</div>
 									</div>
+									
+									<div class="price-select" style="float:right">
+										<div class="price-select__price  text-right">
+											<div class="starter-price-wrapper">
+												<div class="pricepoint-wrapper pricepoint-wrapper--orange">
+													<div class="pricepoint">
+														<span class="pricepoint__middle">
+															890,000
+															<span class="pricepoint__decimal"></span>
+														</span>
+														<span class="pricepoint__symbol">
+															đ
+														</span>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="price-select__button">
+											<div class="button-toggle js-button-toggle">
+												<span>
+													Chọn
+												</span>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class=" qa-flight-card-details">
-						<div class="fare__details fare__details--leg-0 ">
-							<span class="carrier"></span>
-							<div class="flight-info">
-								<div class="flight-info__row  flight-info__flightNubmer">
-									<div class="flight-info__row__label medium-3"> 
-										Chuyến bay 1:
-									</div>
-									<div class="medium-9">
-										<p></p>
-									</div>
-								</div>
-								<div class="flight-info__row">
-									<div class="flight-info__row__label medium-3"> 
-										Khởi hành:
-									</div>
-									<div class="medium-9">
-										<p></p>
-									</div>
-								</div>
-								<div class="flight-info__row">
-									<div class="flight-info__row__label medium-3"> 
-										Đến:
-									</div>
-									<div class="medium-9">
-										<p></p>
-									</div>
-								</div>
-								<div class="flight-info__row">
-									<div class="flight-info__row__label medium-3"> 
-									</div>
-									<div class="flight-info__more medium-9">
-										<div class="flight-info__more__item">
-											Thời gian:
-											<p>2hrs 10mins</p>
+						<div class=" qa-flight-card-details">
+							<div class="fare__details fare__details--leg-0 ">
+								<span class="carrier"></span>
+								<div class="flight-info">
+									<div class="flight-info__row  flight-info__flightNubmer">
+										<div class="flight-info__row__label medium-3"> 
+											Chuyến bay 1:
 										</div>
-										<div class="flight-info__more__item">
-											Máy bay:
-											<p>2hrs 10mins</p>
+										<div class="medium-9">
+											<p></p>
 										</div>
-										<div class="flight-info__more__item">
-											Hãng khai thác:
-											<p>2hrs 10mins</p>
+									</div>
+									<div class="flight-info__row">
+										<div class="flight-info__row__label medium-3"> 
+											Khởi hành:
+										</div>
+										<div class="medium-9">
+											<p></p>
+										</div>
+									</div>
+									<div class="flight-info__row">
+										<div class="flight-info__row__label medium-3"> 
+											Đến:
+										</div>
+										<div class="medium-9">
+											<p></p>
+										</div>
+									</div>
+									<div class="flight-info__row">
+										<div class="flight-info__row__label medium-3"> 
+										</div>
+										<div class="flight-info__more medium-9">
+											<div class="flight-info__more__item">
+												Thời gian:
+												<p>2hrs 10mins</p>
+											</div>
+											<div class="flight-info__more__item">
+												Máy bay:
+												<p>2hrs 10mins</p>
+											</div>
+											<div class="flight-info__more__item">
+												Hãng khai thác:
+												<p>2hrs 10mins</p>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -167,7 +173,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		}
 	</div>
 </section>
 
