--- a/Presentation/Pages/Admin/Customer.cshtml
+++ b/Presentation/Pages/Admin/Customer.cshtml
@@ -14,13 +14,21 @@
     <div class="col-lg-12 stretch-card">
       <div class="card">
         <div class="card-body">
+          <div class="form-group row">
+            <div class="col-sm-7"></div>
+            <div class="col-sm-5">
+              <div class="input-group">
+                <input type="search" class="form-control" placeholder="Search Here">
+                <button type="button" class="btn btn-icons btn-rounded btn-outline-primary"><i class="fa fa-search"></i></button>
+              </div> 
+            </div> 
+          </div>
           <h3 align="center">List of Customers </h3>
           <table class="table table-bordered table-striped table-hover" id="TableCustomer">
            <thead>
             <tr>
               <th>ID</th>
-              <th>First name</th>
-              <th>Last name</th>
+              <th>Full name</th>
               <th>Email</th>
               <th>Status</th>
               <th></th>
@@ -30,12 +38,23 @@
              <!-- change to code later -->
             @foreach (var item in Model.ListCustomer){
               <tr>
-                <td>item.Id</td>
-                <td>item.FirstName</td>
-                <td>item.LastName</td>
-                <td>item.Email</td>
-                <td><label class="badge badge-warning">item.Status</label></td>
+                <td>@item.Id</td>
+                <td>
+                  @item.LastName
+                  @item.FirstName
+                </td>
+                <td>@item.Email</td>
+                @{
+                  if (item.Status==Model.Status){
+                    <td><label class="badge badge-success">@item.Status</label></td>
+                  }
+                  else {
+                    <td><label class="badge badge-danger">@item.Status</label></td>
+                  }
+                }
+                
                 <td> 
+                  <button  id="@item.Id" data-toggle="modal" data-target="#DetailCustomerForm"  type="button" class="btn btn-info btn-sm  btn-rounded DetailCustomer"><i class="fa fa-vcard-o"></i></button>
                   <button  id="@item.Id" data-toggle="modal" data-target="#EditCustomerForm"  type="button" class="btn btn-dark btn-sm  btn-rounded EditCustomer"><i class="fa fa-cog"></i></button>
                   <button  id="@item.Id" type="button" class="btn btn-danger btn-sm  btn-rounded DeleteCustomer"><i class="fa fa-times" ></i></button>
                 </td>
@@ -51,3 +70,225 @@
   <!-- end content_warper -->
 </div>
 <!-- end main body -->
+
+<!-- edit form -->
+<div class="modal fade" id="EditCustomerForm" role="dialog">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content" >
+            <div class="modal-header" style=" background-color:aliceblue;">
+                <h4 class="modal-title" style="margin: 10px 0 10px 510px; color:#000; font-weight: bold;font-size:34">Edit customer</h4>
+            </div>
+		    <div class="model-body" style="margin: 15px">
+				  <form class="form-sample" action="post">
+            <input id="EditCustomer-id" type="text" class="form-control" hidden/>
+            <div class="row">
+              <div class="col-6">
+                <p style="font-weight:600" class="card-description"> Personal info </p>
+              </div>
+              <div class="col-6">
+                <p style="font-weight:600" class="card-description">Personal account </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">First Name</label>
+                  <div class="col-sm-9">
+                    <input id="EditCustomer-firstname" type="text" class="form-control" required/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Username</label>
+                  <div class="col-sm-9">
+                    <input id="EditCustomer-username" type="text" class="form-control" disabled/>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Last Name</label>
+                  <div class="col-sm-9">
+                    <input id="EditCustomer-lastname" type="text" class="form-control" required/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Password</label>
+                  <div class="col-sm-9">
+                    <input id="EditCustomer-password" type="password" class="form-control" disabled/>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Date of Birth</label>
+                  <div class="col-sm-9">
+                    <input id="EditCustomer-birthday" type="date" class="form-control" placeholder="dd/mm/yyyy" />
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Status</label>
+                  <div class="col-sm-9">
+                    <input id="EditCustomer-status" type="text" class="form-control" required/>
+                  </div>
+                </div>
+              </div>   
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Phone</label>
+                  <div class="col-sm-9">
+                    <input id="EditCustomer-phone" type="tel" class="form-control" pattern="0[0-9]{9,10}" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Address</label>
+                  <div class="col-sm-9">
+                    <input id="EditCustomer-address" type="text" class="form-control" />
+                  </div>
+                </div>
+              </div>           
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Email</label>
+                  <div class="col-sm-9">
+                    <input id="EditCustomer-email" type="text" class="form-control" />
+                  </div>
+                </div>
+              </div>                  
+            </div>
+            <div class="row" style=" display: flex; justify-content: flex-end;">
+              <button id="btsubmitEditCustomer" type="submit" class="btn btn-success mr-2"><b>Update</b></button>
+              <button class="btn btn-light" data-dismiss="modal"><b>Cancel</b></button>
+            </div>
+          </form>
+		    </div>
+      </div>    
+    </div>
+</div>
+
+<!-- detail form -->
+<div class="modal fade" id="DetailCustomerForm" role="dialog">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content" >
+            <div class="modal-header" style=" background-color:aliceblue;">
+                <h4 class="modal-title" style="margin: 10px 0 10px 510px; color:#000; font-weight: bold;font-size:34">Detail customer</h4>
+            </div>
+		    <div class="model-body" style="margin: 15px">
+				   <div class="row">
+              <div class="col-6">
+                <p style="font-weight:600" class="card-description"> Personal info </p>
+              </div>
+              <div class="col-6">
+                <p style="font-weight:600" class="card-description">Personal account </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">First Name</label>
+                  <div class="col-sm-9">
+                    <input id="DetailCustomer-firstname" type="text" class="form-control" disabled/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Username</label>
+                  <div class="col-sm-9">
+                    <input id="DetailCustomer-username" type="text" class="form-control" disabled/>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Last Name</label>
+                  <div class="col-sm-9">
+                    <input id="DetailCustomer-lastname" type="text" class="form-control" disabled/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Password</label>
+                  <div class="col-sm-9">
+                    <input id="DetailCustomer-password" type="password" class="form-control" disabled/>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Date of Birth</label>
+                  <div class="col-sm-9">
+                    <input id="DetailCustomer-birthday" type="date" class="form-control" placeholder="dd/mm/yyyy" disabled/>
+                  </div>
+                </div>
+              </div> 
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Status</label>
+                  <div class="col-sm-9">
+                    <input id="DetailCustomer-status" type="text" class="form-control"  disabled/>
+                  </div>
+                </div>
+              </div> 
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Phone</label>
+                  <div class="col-sm-9">
+                    <input id="DetailCustomer-phone" type="tel" class="form-control" pattern="0[0-9]{9,10}" disabled/>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Address</label>
+                  <div class="col-sm-9">
+                    <input id="DetailCustomer-address" type="text" class="form-control" disabled/>
+                  </div>
+                </div>
+              </div>           
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Email</label>
+                  <div class="col-sm-9">
+                    <input id="DetailCustomer-email" type="text" class="form-control" disabled/>
+                  </div>
+                </div>
+              </div>                  
+            </div>
+		    </div>
+        <div class="model-footer" style="margin: 15px">
+          <div class="row" style=" display: flex; justify-content: flex-end;">
+              <button class="btn btn-light" data-dismiss="modal"><b>Back to list</b></button>
+            </div>
+        </div>
+      </div>    
+    </div>
+</div>
