--- a/Presentation/Pages/Shared/_LayoutAdmin.cshtml
+++ b/Presentation/Pages/Shared/_LayoutAdmin.cshtml
@@ -177,7 +177,8 @@
                 <i class="menu-icon typcn typcn-shopping-bag"></i>
                 <span class="menu-title">Employer</span>
               </a>
-            </li><li class="nav-item">
+            </li>
+            <li class="nav-item">
               <a class="nav-link" asp-page="/Admin/Flight">
                 <i class="menu-icon typcn typcn-shopping-bag"></i>
                 <span class="menu-title">Flight</span>
@@ -187,6 +188,11 @@
               <a class="nav-link" asp-page="/Admin/Maker">
                 <i class="menu-icon typcn typcn-shopping-bag"></i>
                 <span class="menu-title">Maker and Plane</span>
+              </a>
+            </li><li class="nav-item">
+              <a class="nav-link" asp-page="/Admin/Airport">
+                <i class="menu-icon typcn typcn-shopping-bag"></i>
+                <span class="menu-title">Airport</span>
               </a>
             </li>
         </nav>
@@ -219,6 +225,8 @@
     <!-- End custom js for this page-->
     <script src="../assets/js/demo_1/Maker.js"></script>
     <script src="../assets/js/demo_1/Plane.js"></script>
+    <script src="../assets/js/demo_1/Airport.js"></script>
+    <script src="../assets/js/demo_1/Customer.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     
 
