--- a/Presentation/Pages/Flight.cshtml
+++ b/Presentation/Pages/Flight.cshtml
@@ -50,6 +50,7 @@
 				<input type="text" data-date-format="DD-dd/mm/yyyy" id="check-in">
 			</div>
 		</div>
+		<p>@Model.Msg</p>
 		@foreach (var item in Model.ListFlights)
 		{
 			@item.FlightId
