--- a/Presentation/Pages/Index.cshtml
+++ b/Presentation/Pages/Index.cshtml
@@ -51,7 +51,7 @@
 										<label for="#">From</label>
 										<div class="form-field" >
 											<div class="icon"><span class="icon-my_location"></span></div>
-											<input asp-for="@Model.From" type="text" id="tags" class="form-control" placeholder="From" />
+											<input asp-for="@Model.From" type="text" id="From" class="form-control" placeholder="From" />
 										</div>
 									</div>
 								</div>
@@ -60,7 +60,7 @@
 										<label for="#">Where</label>
 										<div class="form-field">
 											<div class="icon"><span class="icon-map-marker"></span></div>
-											<input asp-for="@Model.Where" type="text" id="tags" class="form-control" placeholder="Where">
+											<input asp-for="@Model.Where" type="text" id="Where" class="form-control" placeholder="Where">
 										</div>
 									</div>
 								</div>
