--- a/Presentation/Pages/Account.cshtml
+++ b/Presentation/Pages/Account.cshtml
@@ -12,3 +12,42 @@
 			</div>
 		</div>
 	</div>
+	<section class="ftco-section" style="margin-left: auto;margin-right: auto;width: 960px;">
+		<div class="container">
+			<div class="grid_3">
+				<ul class="side-menu side-menu--large">
+					<li class="side-menu--items active">
+						<a id="setting">
+							<i class="icon icon--small icon--account sidenav__icon"></i>
+							<span class="side-menu--text">Account seting</span>
+						</a>
+					</li>
+					<li class="  side-menu--items ">
+						<a id="information">
+							<i class="icon icon--small icon--personal sidenav__icon"></i>
+							<span class="  side-menu--text">Individual Information</span>
+						</a>
+					</li>
+					<li class="  side-menu--items ">
+						<a id="details">
+							<i class="icon icon--small icon--creditcard sidenav__icon"></i>
+							<span class="  side-menu--text">Ticket details </span>
+						</a>
+					</li>
+				</ul>
+				<ul class="side-menu">
+					<li class="  side-menu--items">
+						<a>
+							<span class="side-menu--text">Log Out</span>
+						</a>
+					</li>
+				</ul>
+				<!-- <ul class="  side-menu">
+					<li class="  side-menu--items"><a href="https://booking.jetstar.com/vn/vi/myaccount">Xóa tài khoản</a></li>
+				</ul> -->
+			</div>
+			<div class="grid_12 prefix_1 content">
+			</div>
+		</div>
+		
+	</section>
