--- a/Presentation/Pages/Shared/_LayoutAdmin.cshtml
+++ b/Presentation/Pages/Shared/_LayoutAdmin.cshtml
@@ -22,6 +22,7 @@
     <!-- endinject -->
     <!-- Layout styles -->
     <link rel="stylesheet" href="../assets/css/demo_1/style.css">
+    <link rel="stylesheet" href="../assets/css/shared/pagination.css">
     <!-- End Layout styles -->
     <link rel="shortcut icon" href="../assets/images/favicon.png" />
 
@@ -227,7 +228,7 @@
     <script src="../assets/js/demo_1/Plane.js"></script>
     <script src="../assets/js/demo_1/Airport.js"></script>
     <script src="../assets/js/demo_1/Customer.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="../assets/js/shared/jquery-ui.js"></script>
     
 
     @RenderSection("Scripts", required: false)
