--- a/Presentation/Pages/Admin/Maker.cshtml
+++ b/Presentation/Pages/Admin/Maker.cshtml
@@ -186,7 +186,7 @@
           <div class="form-group row">
             <label class="col-sm-3 col-form-label">SeatNum</label>
             <div class="col-sm-9">
-              <input id="CreatePlane-seatnum" type="text" class="form-control"  placeholder="Enter seat number">
+              <input id="CreatePlane-seatnum" type="number" class="form-control"  placeholder="Enter seat number">
             </div>    
           </div>
           <div class="form-group row">
@@ -221,7 +221,7 @@
           <div class="form-group row">
             <label class="col-sm-3 col-form-label">SeatNum</label>
             <div class="col-sm-9">
-              <input id="EditPlane-seatnum" type="text" class="form-control"  placeholder="Enter seat number">
+              <input id="EditPlane-seatnum" type="number" class="form-control"  placeholder="Enter seat number">
             </div>    
           </div>
           <div class="form-group row">
