Seperate Maker into Plane and Maker (both of them had been added pagination)

--- a/Presentation/Pages/Admin/Airport.cshtml
+++ b/Presentation/Pages/Admin/Airport.cshtml
@@ -110,7 +110,7 @@
           <div class="form-group row">
             <label class="col-sm-3 col-form-label">Name</label>
             <div class="col-sm-9">
-              <input id="CreateAirport-name" type="text" class="form-control" maxlength="30"  placeholder="Enter name" title="You have to fill in it" required>
+              <input id="CreateAirport-name" type="text" class="form-control" maxlength="30"  placeholder="Enter name" pattern="[0-9a-zA-Z]+" title="You have to fill in it" required>
             </div>
             <span style="color: red bold" class="z-CreateAirport-name"></span>
           </div>
@@ -148,7 +148,7 @@
           <div class="form-group row">
             <label class="col-sm-3 col-form-label">Name</label>
             <div class="col-sm-9">
-              <input id="EditAirport-name" type="text" class="form-control" maxlength="30" placeholder="Enter name"  title="You have to fill in it" required>
+              <input id="EditAirport-name" type="text" class="form-control" maxlength="30" placeholder="Enter name" pattern="[0-9a-zA-Z]+" title="You have to fill in it" required>
             </div>
             <span style="color: red bold" class="z-EditAirport-name"></span>
           </div>
