--- a/Presentation/Pages/Shared/_LayoutAdmin.cshtml
+++ b/Presentation/Pages/Shared/_LayoutAdmin.cshtml
@@ -188,7 +188,12 @@
             </li><li class="nav-item">
               <a class="nav-link" asp-page="/Admin/Maker">
                 <i class="menu-icon typcn typcn-shopping-bag"></i>
-                <span class="menu-title">Maker and Plane</span>
+                <span class="menu-title">Maker</span>
+              </a>
+            </li><li class="nav-item">
+              <a class="nav-link" asp-page="/Admin/Plane">
+                <i class="menu-icon typcn typcn-shopping-bag"></i>
+                <span class="menu-title">Plane</span>
               </a>
             </li><li class="nav-item">
               <a class="nav-link" asp-page="/Admin/Airport">
