--- a/Presentation/Pages/Admin/Customer.cshtml
+++ b/Presentation/Pages/Admin/Customer.cshtml
@@ -191,6 +191,7 @@
                 <h4 class="modal-title" style="margin: 10px 0 10px 510px; color:#000; font-weight: bold;font-size:34">Detail customer</h4>
             </div>
 		    <div class="model-body" style="margin: 15px">
+           <form class="form-sample">
 				   <div class="row">
               <div class="col-6">
                 <p style="font-weight:600" class="card-description"> Personal info </p>
@@ -240,7 +241,7 @@
                 <div class="form-group row">
                   <label class="col-sm-3 col-form-label">Date of Birth</label>
                   <div class="col-sm-9">
-                    <input id="DetailCustomer-birthday" type="date" class="form-control" placeholder="dd/mm/yyyy" disabled/>
+                    <input id="DetailCustomer-birthday" type="text" class="form-control" placeholder="dd/mm/yyyy" disabled/>
                   </div>
                 </div>
               </div> 
@@ -283,6 +284,7 @@
                 </div>
               </div>                  
             </div>
+          </form>
 		    </div>
         <div class="model-footer" style="margin: 15px">
           <div class="row" style=" display: flex; justify-content: flex-end;">
