--- a/Presentation/Pages/Admin/Index.cshtml
+++ b/Presentation/Pages/Admin/Index.cshtml
@@ -1,6 +1,8 @@
 @page
 @model Presentation.Pages.Admin.IndexModel
 @{
+	<!-- Layout = "_LayoutAdmin"; -->
+	Layout = null;
 	ViewData["Title"] = "Admin login";
 }
 <!DOCTYPE html>
