--- a/Presentation/Pages/Shared/_Layout.cshtml
+++ b/Presentation/Pages/Shared/_Layout.cshtml
@@ -151,7 +151,7 @@
 </div>
     <script src="~/js/popper.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="~/js/jquery-ui.js"></script>
     <script src="~/js/jquery.easing.1.3.js"></script>
     <script src="~/js/jquery.waypoints.min.js"></script>
     <script src="~/js/jquery.stellar.min.js"></script>
