--- a/Presentation/Pages/Admin/Maker.cshtml
+++ b/Presentation/Pages/Admin/Maker.cshtml
@@ -24,8 +24,8 @@
             <div class="col-sm-5">
               <form>
                 <div class="input-group">
-                  <input type="search" id="SearchCustomer" class="form-control" placeholder="Search Here" name="searchString"  asp-for="SearchString">
-                  <button type="submit" id="btsubmitSearchCustomer" class="btn btn-icons btn-rounded btn-outline-primary"><i class="fa fa-search"></i></button>
+                  <input type="search" id="SearchMaker" class="form-control" placeholder="Search Here" name="searchString"  asp-for="SearchString">
+                  <button type="submit" id="btsubmitSearchMaker" class="btn btn-icons btn-rounded btn-outline-primary"><i class="fa fa-search"></i></button>
                 </div>
               </form> 
             </div> 
