--- a/Presentation/Pages/Admin/Maker.cshtml
+++ b/Presentation/Pages/Admin/Maker.cshtml
@@ -20,16 +20,16 @@
         <div class="card">
           <div class="card-body">
             <div class="form-group row">
-            <div class="col-sm-7"></div>
-            <div class="col-sm-5">
-              <form>
-                <div class="input-group">
-                  <input type="search" id="SearchMaker" class="form-control" placeholder="Search Here" name="searchString"  asp-for="SearchString">
-                  <button type="submit" id="btsubmitSearchMaker" class="btn btn-icons btn-rounded btn-outline-primary"><i class="fa fa-search"></i></button>
-                </div>
-              </form> 
-            </div> 
-          </div>
+              <div class="col-sm-7"></div>
+              <div class="col-sm-5">
+                <form>
+                  <div class="input-group">
+                    <input type="search" id="SearchMaker" class="form-control" placeholder="Search Here" name="searchString"  asp-for="SearchString">
+                    <button type="submit" id="btsubmitSearchMaker" class="btn btn-icons btn-rounded btn-outline-primary"><i class="fa fa-search"></i></button>
+                  </div>
+                </form> 
+              </div> 
+            </div>
             <h3 align="center">List of Makers </h3>
             <table class="table table-bordered table-striped table-hover" id="TableMaker">
             <thead>
@@ -106,13 +106,13 @@
           <div class="form-group row">
             <label class="col-sm-3 col-form-label">Name</label>
             <div class="col-sm-9">
-              <input id="CreateMaker-id" type="text" class="form-control"  placeholder="Enter name">
+              <input id="CreateMaker-name" type="text" class="form-control"  placeholder="Enter name">
             </div>    
           </div>
           <div class="form-group row">
             <label class="col-sm-3 col-form-label">Address</label>
             <div class="col-sm-9">
-              <input id="CreateMaker-name" type="text" class="form-control" placeholder="Enter address">
+              <input id="CreateMaker-address" type="text" class="form-control" placeholder="Enter address">
             </div>
           </div>
           <button id="btsubmitCreateMaker" type="submit" class="btn btn-success mr-2" ><b>Create</b></button>
